# cypheri

./: .clang-format  .gitignore  CMakeLists.txt
include/cypheri/: bytecode.hpp  errors.hpp  nametable.hpp  parse.hpp  token.hpp
src/: bytecode.cpp  errors.cpp  nametable.cpp  parse.cpp  token.cpp
tests/: AplusB.c70  AplusB.cyph  LexOverflowErr.c70  cli.cpp  test_parse.cpp  test_tokenize.cpp
tests/ok-cases/: AplusB.c70
